--- a/bootstarp/boot.html
+++ b/bootstarp/boot.html
@@ -41,7 +41,7 @@
         <h1>Bootstrap相关优质项目推荐</h1>
         <div class="xm">
             <div class="s" style="background: url(./img/xm1.JPG) no-repeat;
-            background-size: cover;"><a href=""></a></div>
+            background-size:100% 100%;"><a href=""></a></div>
             <div class="x">
                 <h2><a href="">优站精选</a></h2>
                 <h3><a href="">Bootstrap 网站实例</a></h3>
@@ -50,7 +50,7 @@
         </div>
         <div class="xm">
             <div class="s" style="   background: url(./img/xm2.JPG) no-repeat;
-            background-size: cover;"><a href=""></a></div>
+            background-size:100% 100%;"><a href=""></a></div>
             <div class="x">
                 <h2><a href="">Webpack</a></h2>
                 <h3><a href="">是前端资源模块化管理和打包工具</a></h3>
@@ -59,7 +59,7 @@
         </div>
         <div class="xm">
             <div class="s" style="   background: url(./img/xm3.JPG) no-repeat;
-            background-size: cover;"><a href=""></a></div>
+            background-size:100% 100%;"><a href=""></a></div>
             <div class="x">
                 <h2><a href="">React</a></h2>
                 <h3><a href="">用于构建用户界面的 JavaScript 框架</a></h3>
@@ -68,7 +68,7 @@
         </div>
         <div class="xm">
             <div class="s" style="   background: url(./img/xm4.JPG) no-repeat;
-            background-size: cover;"><a href=""></a></div>
+            background-size:100% 100%;"><a href=""></a></div>
             <div class="x">
                 <h2><a href="">TypeScript </a></h2>
                 <h3><a href="">中文手册</a></h3>
@@ -77,7 +77,7 @@
         </div>
         <div class="xm">
             <div class="s" style="   background: url(./img/xm5.JPG) no-repeat;
-            background-size: cover;"><a href=""></a></div>
+            background-size:100% 100%;"><a href=""></a></div>
             <div class="x">
                 <h2><a href="">Svelte</a></h2>
                 <h3><a href="">中文网</a></h3>
@@ -86,7 +86,7 @@
         </div>
         <div class="xm">
             <div class="s" style="   background: url(./img/xm6.JPG) no-repeat;
-            background-size: cover;"><a href=""></a></div>
+            background-size:100% 100%;"><a href=""></a></div>
             <div class="x">
                 <h2><a href="">Next.js</a></h2>
                 <h3><a href="">中文文档</a></h3>
@@ -95,7 +95,7 @@
         </div>
         <div class="xm">
             <div class="s" style="   background: url(./img/xm7.JPG) no-repeat;
-            background-size: cover;"><a href=""></a></div>
+            background-size:100% 100%;"><a href=""></a></div>
             <div class="x">
                 <h2><a href="">Babel </a></h2>
                 <h3><a href="">是一个 JavaScript 编译器。</a></h3>
@@ -104,7 +104,7 @@
         </div>
         <div class="xm">
             <div class="s" style="   background: url(./img/xm8.JPG) no-repeat;
-            background-size: cover;"><a href=""></a></div>
+            background-size:100% 100%;"><a href=""></a></div>
             <div class="x">
                 <h2><a href="">Node.js</a></h2>
                 <h3><a href="">中文文档 / 手册</a></h3>
@@ -113,7 +113,7 @@
         </div>
         <div class="xm">
             <div class="s" style="   background: url(./img/xm9.JPG) no-repeat;
-            background-size: cover;"><a href=""></a></div>
+            background-size:100% 100%;"><a href=""></a></div>
             <div class="x">
                 <h2><a href="">Deno </a></h2>
                 <h3><a href="">中文文档</a></h3>
@@ -122,7 +122,7 @@
         </div>
         <div class="xm">
             <div class="s" style="   background: url(./img/xm10.JPG) no-repeat;
-            background-size: cover;"><a href=""></a></div>
+            background-size:100% 100%;"><a href=""></a></div>
             <div class="x">
                 <h2><a href="">Yarn </a></h2>
                 <h3><a href="">中文手册</a></h3>
@@ -131,7 +131,7 @@
         </div>
         <div class="xm">
             <div class="s" style="   background: url(./img/xm11.JPG) no-repeat;
-            background-size: cover;"><a href=""></a></div>
+            background-size:100% 100%;"><a href=""></a></div>
             <div class="x">
                 <h2><a href="">Yarn v2 </a></h2>
                 <h3><a href="">中文手册</a></h3>
@@ -140,7 +140,7 @@
         </div>
         <div class="xm">
             <div class="s" style="   background: url(./img/xm12.JPG) no-repeat;
-            background-size: cover;"><a href=""></a></div>
+            background-size:100% 100%;"><a href=""></a></div>
             <div class="x">
                 <h2><a href="">NPM </a></h2>
                 <h3><a href="">中文文档</a></h3>
