--- a/bysj/lzs_index.html
+++ b/bysj/lzs_index.html
@@ -45,6 +45,12 @@
 	    <label for="">2019-3</label><li><a href="./2019-3.html">javascript 总结(常用工具类)</a></li>
 	    <label for="">2019-2</label><li><a href="./2019-2.html">原生JS 封装 ajax 跟 fetch</a></li>
 	    <label for="">2019-1</label><li><a href="./2019-1.html">Vue学习笔记</a></li>
+		<label for="">2019-6</label><li><a href="./2019-6.html">vue移动端路由切换完整实例</a></li>
+	    <label for="">2019-5</label><li><a href="./2019-5.html">React实战篇（React仿今日头条）</a></li>
+	    <label for="">2019-4</label><li><a href="./2019-4.html">react后台管理（react初窥）</a></li>
+	    <label for="">2019-3</label><li><a href="./2019-3.html">javascript 总结(常用工具类)</a></li>
+	    <label for="">2019-2</label><li><a href="./2019-2.html">原生JS 封装 ajax 跟 fetch</a></li>
+	    <label for="">2019-1</label><li><a href="./2019-1.html">Vue学习笔记</a></li>
 	   </ul>
 	</main>
 	<footer>
