--- a/weather/index.html
+++ b/weather/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=0">
     <title>天气</title>
     <link rel="stylesheet" href="./css/u-reset.css">
-    <link rel="stylesheet" href="./css/swiper-bundle.min.css">
+    <link rel="stylesheet" href="./css/swiper-3.4.2.min.css">
     <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
@@ -46,7 +46,7 @@
             <img src="./img/air_chose.png" alt="">
         </div>
     </section>
-    <script src="./js/swiper-bundle.min.js"></script>
+    <script src="./js/swiper-3.4.2.min.js"></script>
     <script src="./js/zepto.js"></script>
     <script src="./js/index.js"></script>
 </body>
