--- a/vicor/index.html
+++ b/vicor/index.html
@@ -46,32 +46,34 @@
             </div>
         </div>
         <div class="content">
-            <div>
-                <img src="img/tu1.png" alt="">
-                <p>VERFO LAB</p>
-                <p>现代简约时尚布艺沙发</p>
+            <div class="contentx">
                 <div>
-                    <span>800</span><span>RMB</span>
-                    <input type="button" value="点击购买">
+                    <img src="img/tu1.png" alt="">
+                    <p>VERFO LAB</p>
+                    <p>现代简约时尚布艺沙发</p>
+                    <div>
+                        <span>800</span><span>RMB</span>
+                        <input type="button" value="点击购买">
+                    </div>
+                    <img src="img/hot.jpg" alt="">
                 </div>
-                <img src="img/hot.jpg" alt="">
-            </div>
-            <div>
-                <img src="img/tu2.png" alt="">
-                <p>VERFO LAB</p>
-                <p>现代简约时尚布艺沙发</p>
                 <div>
-                    <span>800</span><span>RMB</span>
-                    <input type="button" value="点击购买">
+                    <img src="img/tu2.png" alt="">
+                    <p>VERFO LAB</p>
+                    <p>现代简约时尚布艺沙发</p>
+                    <div>
+                        <span>800</span><span>RMB</span>
+                        <input type="button" value="点击购买">
+                    </div>
                 </div>
-            </div>
-            <div>
-                <img src="img/tu1.png" alt="">
-                <p>VERFO LAB</p>
-                <p>现代简约时尚布艺沙发</p>
                 <div>
-                    <span>800</span><span>RMB</span>
-                    <input type="button" value="点击购买">
+                    <img src="img/tu1.png" alt="">
+                    <p>VERFO LAB</p>
+                    <p>现代简约时尚布艺沙发</p>
+                    <div>
+                        <span>800</span><span>RMB</span>
+                        <input type="button" value="点击购买">
+                    </div>
                 </div>
             </div>
         </div>
