--- a/bysj/xmcg.html
+++ b/bysj/xmcg.html
@@ -8,12 +8,12 @@
 <body>
 	<ul>
 		<li><a href="../bootstarp/boot.html">响应式网页(boot)</a></li>
-	    <li><a href="../hospital/hospital.html">个人网站(hospital)</a></li>
-	    <li><a href="../lyb/lyb.html">留言板</a></li>
+	    <li><a href="../hospital/hospital.html">hospital</a></li>
+	    <li><a href="../tmao/tmao.html">天猫</a></li>
 		<li><a href="../stopcar/index.html">停车场</a></li>
 		<li><a href="../sanshan/index.html">三衫智能</a></li>
 		<li><a href="../vicor/index.html">居家家具(vicor)</a></li>
-		<li><a href="../mobile/index.html">h5</a></li>
+		<li><a href="../mobile/index.html">mobileShoes</a></li>
 		<li><a href="../weather/index.html">天气(weather)</a></li>
 	    <li>未完待续...</li>
 	</ul>
