--- a/bysj/jszt.html
+++ b/bysj/jszt.html
@@ -7,12 +7,12 @@
 </head>
 <body>
 	<ul>
-		<label for="">2019-6</label><li><a href="./2019-6.html">vue移动端路由切换完整实例</a></li>
-	    <label for="">2019-5</label><li><a href="./2019-5.html">React实战篇（React仿今日头条）</a></li>
-	    <label for="">2019-4</label><li><a href="./2019-4.html">react后台管理（react初窥）</a></li>
-	    <label for="">2019-3</label><li><a href="./2019-3.html">javascript 总结(常用工具类)</a></li>
-	    <label for="">2019-2</label><li><a href="./2019-2.html">原生JS 封装 ajax 跟 fetch</a></li>
-	    <label for="">2019-1</label><li><a href="./2019-1.html">Vue学习笔记</a></li>
+		<label for="">2022-0</label><li><a href="./2022-0.html">PS总结</a></li>
+	    <label for="">2022-1</label><li><a href="./2022-1.html">Html,css总结</a></li>
+	    <label for="">2022-2</label><li><a href="./2022-2.html">Js总结</a></li>
+	    <label for="">2022-3</label><li><a href="./2022-3.html">Vue总结</a></li>
+	    <label for="">2022-4</label><li><a href="./2022-4.html">全栈知识点总结</a></li>
+	    <label for="">2022-5</label><li><a href="./2022-5.html">Python总结</a></li>
 	</ul>
 </body>
 </html>
