--- a/vicor/index.html
+++ b/vicor/index.html
@@ -188,20 +188,28 @@
     <footer>
         <ul class="table">
             <li>
-                <p>&#xe60b;</p>
-                <p><a href="./index.html">首页</a></p>
+                <a href="./index.html">
+                   <p>&#xe60b;</p>
+                   <p>首页</p>
+                </a>
+            </li>
+            <li> 
+               <a href="./classify.html">
+                  <p>&#xe65e;</p> 
+                  <p>分类</p> 
+              </a>
             </li>
             <li>
-                <p>&#xe65e;</p>
-                <p><a href="./classify.html">分类</a></p> 
+                 <a href="./shopping.html">
+                    <p>&#xf0179;</p>
+                    <p>购物车</p>
+                </a>
             </li>
             <li>
-                <p>&#xf0179;</p>
-                <p><a href="./shopping.html">购物车</a></p>
-            </li>
-            <li>
-                <p>&#xe6c9;</p>
-                <p><a href="./mine.html">我的</a></p>
+                <a href="./mine.html">
+                    <p>&#xe6c9;</p>
+                    <p>我的</p>
+               </a>
             </li>
         </ul>
     </footer>
