--- a/bysj/jszt.html
+++ b/bysj/jszt.html
@@ -13,6 +13,7 @@
 	    <label for="">2022-3</label><li><a href="./2022-3.html">Vue总结</a></li>
 	    <label for="">2022-4</label><li><a href="./2022-4.html">全栈知识点总结</a></li>
 	    <label for="">2022-5</label><li><a href="./2022-5.html">Python总结</a></li>
+	    <label for="">2022-6</label><li><a href="">未完待续</a></li>
 	</ul>
 </body>
 </html>
