--- a/bysj/lzs_index.html
+++ b/bysj/lzs_index.html
@@ -45,12 +45,7 @@
 	    <label for="">2022-3</label><li><a href="./2022-3.html">Vue总结</a></li>
 	    <label for="">2022-4</label><li><a href="./2022-4.html">全栈知识点总结</a></li>
 	    <label for="">2022-5</label><li><a href="./2022-5.html">Python总结</a></li>
-		<label for="">2022-0</label><li><a href="./2022-0.html">PS总结</a></li>
-	    <label for="">2022-1</label><li><a href="./2022-1.html">Html,css总结</a></li>
-	    <label for="">2022-2</label><li><a href="./2022-2.html">Js总结</a></li>
-	    <label for="">2022-3</label><li><a href="./2022-3.html">Vue总结</a></li>
-	    <label for="">2022-4</label><li><a href="./2022-4.html">全栈知识点总结</a></li>
-	    <label for="">2022-5</label><li><a href="./2022-5.html">Python总结</a></li>
+		<label for="">2022-6</label><li><a href="">未完待续...</a></li>
 	   </ul>
 	</main>
 	<footer>
