--- a/bysj/xmcg.html
+++ b/bysj/xmcg.html
@@ -6,16 +6,16 @@
 <link rel="stylesheet" href="css/xmcg.css">	
 </head>
 <body>
-	<ul>
-		<li><a href="../bootstarp/boot.html">响应式网页(boot)</a></li>
-	    <li><a href="../hospital/hospital.html">hospital</a></li>
-	    <li><a href="../tmao/tmao.html">天猫</a></li>
-		<li><a href="../stopcar/index.html">停车场</a></li>
-		<li><a href="../sanshan/index.html">三衫智能</a></li>
-		<li><a href="../vicor/index.html">居家家具(vicor)</a></li>
-		<li><a href="../mobile/index.html">mobileShoes</a></li>
-		<li><a href="../weather/index.html">天气(weather)</a></li>
-	    <li>未完待续...</li>
-	</ul>
+	<main>
+		<ul>
+			<li><a href="../hospital/hospital.html">hospital(双端)</a></li>
+			<li><a href="../tmao/tmao.html">天猫(pc端)</a></li>
+			<li><a href="../stopcar/index.html">停车场(pc端)</a></li>
+			<li><a href="../vicor/index.html">居家家具(移动端)</a></li>
+			<li><a href="../mobile/index.html">mobileShoes(移动端)</a></li>
+			<li><a href="../weather/index.html">天气(移动端)</a></li>
+			<li><a href="">未完待续...</a></li>
+		</ul>
+	</main>
 </body>
 </html>
