--- a/hospital/hospital.html
+++ b/hospital/hospital.html
@@ -77,6 +77,7 @@
             </li>
         </ul>
     </nav>
+    <div class="dbkb"></div>
     <div class="winDow">
         <ul class="lbt">
                 <li style="background-image: url(./img/医院nav1.jpg)"></li>
