--- a/vicor/details.html
+++ b/vicor/details.html
@@ -14,6 +14,7 @@
         <img src="./img/index-1.png" alt="">
         <span>&#xe637;</span>
     </header>
+    <div style="height: 0.88rem;"></div>
     <section class="details">
         <ul class="detailsTittle">
            <li>
@@ -243,7 +244,7 @@
             </li>
         </ul>
     </section>
-    <footer>
+    <footer class="footerFirst">
         <div class="footerLeft">
            <i class="iconfont icon-wodeshoucang"></i>
             <p>收藏</p>
@@ -257,5 +258,34 @@
             </li>
         </ul>
     </footer>
+    <footer>
+        <ul class="table">
+            <li>
+                <a href="./index.html">
+                   <p>&#xe60b;</p>
+                   <p>首页</p>
+                </a>
+            </li>
+            <li> 
+               <a href="./classify.html">
+                  <p>&#xe65e;</p> 
+                  <p>分类</p> 
+              </a>
+            </li>
+            <li>
+                 <a href="./shopping.html">
+                    <p>&#xf0179;</p>
+                    <p>购物车</p>
+                </a>
+            </li>
+            <li>
+                <a href="./mine.html">
+                    <p>&#xe6c9;</p>
+                    <p>我的</p>
+               </a>
+            </li>
+        </ul>
+    </footer>
+    <div style="height: 1rem;"></div>
 </body>
 </html>
