--- a/vicor/index.html
+++ b/vicor/index.html
@@ -14,6 +14,7 @@
         <img src="./img/index-1.png" alt="">
         <span>&#xe637;</span>
     </header>
+    <div style="height: 0.88rem;"></div>
     <nav>
         <ul>
             <li>产品分类</li>
