--- a/vicor/classify.html
+++ b/vicor/classify.html
@@ -14,6 +14,7 @@
         <img src="./img/index-1.png" alt="">
         <span>&#xe637;</span>
     </header>
+    <div style="height: 0.88rem;"></div>
     <div class="search"><input type="text" placeholder="搜索店内精品"><span>搜索</span></div>
     <main>
         <ul class="left">
